# VortexRAG

./: .gitignore  GITHUB_PUSH_GUIDE.md  INSTALLATION.md  LOGO_AND_SETUP_GUIDE.md  PROJECT_FINAL_REPORT.md  QUICK_START.md  README.md  REBRANDING_SUMMARY.md  SETUP_COMPLETE.md  push_to_github.sh  pyproject.toml  verify_setup.py
.github/workflows/: ci-smoke.yml
data/knowledge_base/: collection_display_names.json  kb_config.json
docs/thesis-detailed-design/: .$00-system-overview.drawio.bkp  .$01-builder-module.drawio.bkp  .$02-chat-module-sequence.drawio.bkp  .$03-kb-module.drawio.bkp  .$04-ai-assistant-module.drawio.bkp  .$05-prompt-module.drawio.bkp  .$06-backend-api-module.drawio.bkp  .$08-milvus-data-model.drawio.bkp  .$09-corpus-ingestion-flow.drawio.bkp  .$10-embedding-index-retrieval.drawio.bkp  00-system-overview.drawio  01-builder-module.drawio  02-chat-module-sequence.drawio  03-kb-module.drawio  04-ai-assistant-module.drawio  05-prompt-module.drawio  06-backend-api-module.drawio  07-pipeline-execution-module.drawio  08-milvus-data-model.drawio  09-corpus-ingestion-flow.drawio  10-embedding-index-retrieval.drawio  vue-ui-builder-user-usecase.drawio  vue-ui-chat-user-usecase.drawio
examples/: AgentCPM-Report-web.yaml  AgentCPM-Report.yaml  LLM.yaml  LightResearch.yaml  RAG-web.yaml  RAG.yaml  milvus_index.yaml  multiturn_chat.yaml
examples/parameter/: AgentCPM-Report_parameter.yaml  LLM_parameter.yaml  LightResearch_parameter.yaml  RAG_parameter.yaml  build_text_corpus_parameter.yaml  sayhello_parameter.yaml
script/: deploy_retriever_server.py
(+98 files in other folders)
